# SharpStock

./: LICENSE  README.md  main.py  pyproject.toml  sharpe_ratio.py
sharpstock/tests/: test_sharpe_ratio.py
tests/: test_sharpe_ratio.py
