[tool.poetry]
name = "sharpstock"
version = "0.1.0"
description = "A simple Python library to calculate the Sharpe Ratio of a stock."
authors = ["tim-hub <tim-hub@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
